--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "main": "index.js",
   "scripts": {
     "fix": "npx standard --fix",
-    "start": "node ./src/server.js",
+    "start": "gulp default",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@hapi/hapi": "^18.4.0"
+    "@hapi/hapi": "^18.4.0",
+    "regenerator-runtime": "^0.13.3",
+    "core-js": "^3.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.7.7",
