--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
   "license": "MIT",
   "dependencies": {
     "@hapi/hapi": "^18.4.0",
+    "core-js": "^3.6.0",
     "regenerator-runtime": "^0.13.3",
-    "core-js": "^3.6.0"
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.7.7",
