--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
   "dependencies": {
     "@hapi/hapi": "^18.4.0",
     "core-js": "^3.6.0",
+    "pg": "^7.17.0",
+    "pg-hstore": "^2.3.3",
     "regenerator-runtime": "^0.13.3",
+    "sequelize": "^5.21.3",
     "winston": "^3.2.1"
   },
   "devDependencies": {
