--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@hapi/hapi": "^18.4.0",
     "core-js": "^3.6.0",
+    "hapi-swagger": "^11.1.0",
     "pg": "^7.17.0",
     "pg-hstore": "^2.3.3",
     "regenerator-runtime": "^0.13.3",
