--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "license": "MIT",
   "dependencies": {
     "@hapi/hapi": "^18.4.0",
+    "@hapi/inert": "^5.2.2",
+    "@hapi/vision": "^5.5.4",
     "core-js": "^3.6.0",
     "hapi-swagger": "^11.1.0",
     "pg": "^7.17.0",
