--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@hapi/hapi": "^18.4.0",
     "@hapi/inert": "^5.2.2",
+    "@hapi/joi": "^16.1.8",
     "@hapi/vision": "^5.5.4",
     "core-js": "^3.6.0",
     "hapi-swagger": "^11.1.0",
