--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@hapi/joi": "^16.1.8",
     "@hapi/vision": "^5.5.4",
     "core-js": "^3.6.0",
+    "dotenv": "^8.2.0",
     "hapi-swagger": "^11.1.0",
     "pg": "^7.17.0",
     "pg-hstore": "^2.3.3",
@@ -38,6 +39,7 @@
     "gulp-eslint": "^6.0.0",
     "gulp-nodemon": "^2.4.2",
     "gulp-shell": "^0.7.1",
+    "mysql2": "^2.1.0",
     "standard": "^14.3.1"
   }
 }
