--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   ],
   "license": "MIT",
   "dependencies": {
+    "@hapi/boom": "^8.0.1",
     "@hapi/hapi": "^18.4.0",
     "@hapi/inert": "^5.2.2",
     "@hapi/joi": "^16.1.8",
