--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@hapi/inert": "^5.2.2",
     "@hapi/joi": "^16.1.8",
     "@hapi/vision": "^5.5.4",
+    "bcrypt": "^3.0.7",
     "core-js": "^3.6.0",
     "fs": "0.0.1-security",
     "hapi-swagger": "^11.1.0",
