--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "hapi-auth-jwt2": "^8.8.1",
     "hapi-swagger": "^11.1.0",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
     "pg": "^7.17.0",
     "pg-hstore": "^2.3.3",
     "regenerator-runtime": "^0.13.3",
