added output validations final

--- a/src/modules/api/users/package.json
+++ b/src/modules/api/users/package.json
@@ -1,9 +1,4 @@
 {
     "name": "api.users",
-    "version": "1.0.0",
-    "options": {
-        "response": {
-            "sample":100
-        }
-    }
+    "version": "1.0.0"
 }
