--- a/src/modules/api/package.json
+++ b/src/modules/api/package.json
@@ -1,4 +1,9 @@
 {
     "name": "api",
-    "version": "1.0.0"
+    "version": "1.0.0",
+    "options": {
+        "response": {
+            "sample":100
+        }
+    }
 }
