--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
   "license": "MIT",
   "dependencies": {
     "@hapi/boom": "^8.0.1",
-    "@hapi/hapi": "^18.4.1",
-    "@hapi/inert": "^5.2.2",
-    "@hapi/joi": "^16.1.8",
-    "@hapi/vision": "^5.5.4",
+    "@hapi/hapi": "^19.1.1",
+    "@hapi/inert": "^6.0.1",
+    "@hapi/joi": "^17.1.1",
+    "@hapi/vision": "^6.0.0",
     "bcrypt": "^3.0.8",
     "core-js": "^3.6.5",
     "hapi-auth-jwt2": "^10.1.0",
-    "hapi-swagger": "^11.1.0",
+    "hapi-swagger": "^13.0.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "pg": "^7.18.2",
@@ -43,6 +43,7 @@
     "gulp-eslint": "^6.0.0",
     "gulp-nodemon": "^2.5.0",
     "gulp-shell": "^0.7.1",
+    "mocha": "^7.1.2",
     "standard": "^14.3.4"
   }
 }
