--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "hapi-swagger": "^13.0.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
-    "pg": "^7.18.2",
+    "pg": "^8.0.3",
     "pg-hstore": "^2.3.3",
     "regenerator-runtime": "^0.13.5",
     "sequelize": "^5.21.10",
@@ -37,13 +37,14 @@
   "devDependencies": {
     "@babel/core": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
+    "@hapi/code": "^8.0.1",
+    "@hapi/lab": "^22.0.4",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-clean": "^0.4.0",
     "gulp-eslint": "^6.0.0",
     "gulp-nodemon": "^2.5.0",
-    "gulp-shell": "^0.7.1",
-    "mocha": "^7.1.2",
+    "gulp-standard": "^14.0.0",
     "standard": "^14.3.4"
   }
 }
