--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "fix": "npx standard --fix",
     "start": "gulp default",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "lab -v **/*.test.js"
   },
   "author": "mrgigabyte",
   "keywords": [
