--- a/src/config/config.prod.json
+++ b/src/config/config.prod.json
@@ -11,14 +11,12 @@
     "server": {
         "host": "localhost",
         "port": 8080,
-        "plugins": [
-            "swagger"
-        ]
+        "plugins": []
     },
     "database": {
         "host": "localhost",
         "port": 5432,
-        "name": "mrgigabyte",
+        "name": "hapi_boilerplate_prod",
         "username": "mrgigabyte",
         "password": "abc@123",
         "pool": {
@@ -29,19 +27,5 @@
         },
         "dialect": "postgres"
     },
-    "plugins": {
-        "hapi-swagger": {
-            "info": {
-                "title": "hapi-boilerplate",
-                "version": "1.0.0"
-            },
-            "securityDefinitions": {
-                "jwt": {
-                    "type": "apiKey",
-                    "name": "Authorization",
-                    "in": "header"
-                }
-            }
-        }
-    }
+    "plugins": {}
 }
