--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "fix": "npx standard --fix",
     "start": "gulp default",
-    "test": "lab -v **/*.test.js"
+    "test": "lab -v --leaks **/*.test.js"
   },
   "author": "mrgigabyte",
   "keywords": [
@@ -23,15 +23,13 @@
     "@hapi/joi": "^17.1.1",
     "@hapi/vision": "^6.0.0",
     "bcrypt": "^3.0.8",
-    "core-js": "^3.6.5",
     "hapi-auth-jwt2": "^10.1.0",
     "hapi-swagger": "^13.0.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "pg": "^8.0.3",
     "pg-hstore": "^2.3.3",
-    "regenerator-runtime": "^0.13.5",
-    "sequelize": "^5.21.10",
+    "sequelize": "^5.21.12",
     "winston": "^3.2.1"
   },
   "devDependencies": {
